<resources>
    <string name="app_name">Contact Book</string>
    <string name="title">ContactBook</string>
    <string name="action_settings">Settings</string>
    <string name="label_user_name">User Name</string>
    <string name="mainMenuText">Main Menu</string>
    <string name="addButtonText">Add a New Contact</string>
    <string name="listButtonText">List All Contacts</string>
    <string name="hint_name_required">Name (Required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">Zip:</string>
    <string name="label_type">Contact Type (Select One)</string>
    <string name="radio_button_Family">Family</string>
    <string name="radio_button_Friend">Friend</string>
    <string name="radio_button_Business">Business</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="label_Add_Contact">Add Contact</string>
    <string name="label_view_contact">View Contact</string>
    <string name="label_type_view">Contact Type</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="headerTextView">Add Contact</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>

</resources>